# multilog-consumer

./: Cargo.toml  README.md
src/: main.rs
