[package]
name = "log-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive"] }
ctrlc = "3.4.1"
env_logger = "0.10.1"
itertools = "0.12.0"
linemux = "0.3.0"
tokio = { version = "1.34.0", features = ["full"] }
